--- a/HW2/index.html
+++ b/HW2/index.html
@@ -8,6 +8,7 @@
 <body>
     <h2>Hellow</h2>
     <h3>Test</h3>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corporis, deserunt?</p>
 </body>
 </html>
 
